# Private-Financial-Intelligence-Engine

./: .gitignore  README.md
Backend/: .env.example  pyproject.toml  vercel.json
Backend/app/: main.py
Backend/app/core/: config.py  database.py  logging_config.py  middleware.py  security.py
Backend/app/features/auth/: deps.py  models.py  router.py  schemas.py
Backend/app/features/dashboard/: router.py  service.py
Backend/app/features/forecasting/: service.py
Backend/app/features/sanitizer/: service.py
Backend/app/features/sync/: models.py  router.py  service.py
Backend/app/features/transactions/: enums.py  models.py  router.py  schemas.py  service.py
